Fix line spacing

--- a/fraporu/tìlam/tìlam.css
+++ b/fraporu/tìlam/tìlam.css
@@ -26,7 +26,7 @@ body {
 	color: #222;
 	padding: 0 15px;
 	width: 100%;
-	line-height: inherit;
+	line-height: 1.5;
 }
 
 .container {
